tests/lang/oberon/types/pass/alias.obr
MODULE RecursivePointer;
    TYPE X = INTEGER;
END RecursivePointer.
