tests/lang/oberon/types/fail/invalid-type.obr
MODULE InvalidType;
    TYPE invalid = NOT_A_TYPE;
END InvalidType.
